refactored response object